Add S3 event photo upload and simplify journey/event navigation.
Support up to 10 photos on event create via S3 presigned URLs, make event detail read-only with a separate edit route, and keep back links to the journeys list or journey timeline.

Co-authored-by: Cursor <cursoragent@cursor.com>